--- a/WSDL2ObjC-Info.plist
+++ b/WSDL2ObjC-Info.plist
@@ -13,16 +13,16 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.7</string>
+	<string>0.8</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.7</string>
+	<string>0.8</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Copyright (c) 2008-2010 LightSPEED Technologies, Inc.</string>
+	<string>Copyright (c) 2014 SiamSquared Technologies(Thailand) Co.,Ltd.</string>
 </dict>
 </plist>
